--- a/css/style.css
+++ b/css/style.css
@@ -22,14 +22,17 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-family: 'Outfit', sans-serif;
+  height: 100vh;
 }
 
 body .main {
   background-color: white;
-  height: 67vh;
-  padding: 10px;
+  padding: 12px;
+  height: 390px;
   border-radius: 15px;
-  margin: 4em;
+  -webkit-box-shadow: 0 15px 15px rgba(123, 135, 157, 0.2);
+          box-shadow: 0 15px 15px rgba(123, 135, 157, 0.2);
+  margin: 6em;
 }
 
 body .main .qr {
@@ -45,7 +48,7 @@ body .main .qr {
 }
 
 body .main .qr img {
-  width: 18vw;
+  width: 221px;
   border-radius: 10px;
   margin-bottom: 20px;
 }
@@ -78,7 +81,7 @@ body .main .all-text h3 {
   color: #7b879d;
   text-align: center;
   font-size: .8rem;
-  width: 15vw;
+  width: 220px;
   font-weight: 400;
 }
 /*# sourceMappingURL=style.css.map */
