--- a/css/style.scss
+++ b/css/style.scss
@@ -2,31 +2,30 @@
 @import 'resets';
 
 body {
-
     background: $bg;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Outfit', sans-serif;
-
+    height: 100vh;
     .main {
         background-color: $content-bg;
-        height: 67vh;
-        padding: 10px;
+        padding: 12px;
+        height: 390px;
         border-radius: 15px;
-        margin: 4em;
+        box-shadow: 0 15px 15px rgba(123, 135, 157,0.2);
+        margin: 6em;
         .qr {
             display: flex;
             justify-content: center;
             align-items: center;
             img {
-                width: 18vw;
+                width: 221px;
                 border-radius: 10px;
                 margin-bottom: 20px;
             }
         }
-
         .all-text {
             display: flex;
             justify-content: center;
@@ -43,7 +42,7 @@ body {
                 color: $grayish-blue;
                 text-align: center;
                 font-size: .8rem;
-                width: 15vw;
+                width: 220px;
                 font-weight: 400;
             }
         }
